[gd_scene load_steps=6 format=3 uid="uid://dcr85ck7dw65h"]

[ext_resource type="Script" path="res://team_starting_unit_selector.gd" id="1_euauh"]
[ext_resource type="TileSet" uid="uid://cc3shgi4yyt5c" path="res://main_map_tileset.tres" id="1_wn45l"]
[ext_resource type="PackedScene" uid="uid://dmw7ncpbymxpf" path="res://map_trash_obj.tscn" id="2_s7clh"]
[ext_resource type="Texture2D" uid="uid://nb7t8xgq5g1s" path="res://assets/s1spritesheet.png" id="4_euo63"]
[ext_resource type="PackedScene" uid="uid://c5j6yc30a0sip" path="res://cost.tscn" id="5_4h0cf"]

[node name="unit_sel" type="PanelContainer" groups=["team_edit_unit_sel"]]
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_euauh")

[node name="m" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="limits" type="MarginContainer" parent="m"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="anchor" type="Node2D" parent="m/limits"]
position = Vector2(133, 72)
scale = Vector2(1.33, 1.33)

[node name="TileMap" type="TileMap" parent="m/limits/anchor"]
position = Vector2(-32, -32)
tile_set = ExtResource("1_wn45l")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 65536, 0, -65536, 65536, 0, 0, 0, 0, 65535, 0, 458752, 65534, 0, 0, 2, 0, 0, -1, 65536, 0, -65535, 65536, 0, -65534, 65536, 0, 1, 0, 458752, 65536, 0, 458752)
layer_1/modulate = Color(1, 1, 1, 0.501961)
layer_1/tile_data = PackedInt32Array()

[node name="trash" parent="m/limits/anchor/TileMap" instance=ExtResource("2_s7clh")]
map_pos = Vector2i(-1, 0)

[node name="trash2" parent="m/limits/anchor/TileMap" instance=ExtResource("2_s7clh")]
map_pos = Vector2i(0, 1)

[node name="trash3" parent="m/limits/anchor/TileMap" instance=ExtResource("2_s7clh")]
map_pos = Vector2i(1, 0)

[node name="unit" type="Sprite2D" parent="m/limits/anchor"]
texture = ExtResource("4_euo63")
hframes = 7
vframes = 3

[node name="h" type="HBoxContainer" parent="m"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="price" type="PanelContainer" parent="m/h"]
custom_minimum_size = Vector2(54, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="m" type="MarginContainer" parent="m/h/price"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="v" type="VBoxContainer" parent="m/h/price/m"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="m" type="MarginContainer" parent="m/h/price/m/v"]
layout_mode = 2
theme_override_constants/margin_top = -5
theme_override_constants/margin_bottom = 1

[node name="Label" type="Label" parent="m/h/price/m/v/m"]
layout_mode = 2
text = "Buy"
horizontal_alignment = 1

[node name="cost" parent="m/h/price/m/v" instance=ExtResource("5_4h0cf")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 3
override_visible = 15
font_size_override = 25

[node name="OptionButton" type="OptionButton" parent="m/h"]
custom_minimum_size = Vector2(137, 31)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
alignment = 1

[node name="sale" type="PanelContainer" parent="m/h"]
custom_minimum_size = Vector2(54, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="m" type="MarginContainer" parent="m/h/sale"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="v" type="VBoxContainer" parent="m/h/sale/m"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="m" type="MarginContainer" parent="m/h/sale/m/v"]
layout_mode = 2
theme_override_constants/margin_top = -5
theme_override_constants/margin_bottom = 1

[node name="Label" type="Label" parent="m/h/sale/m/v/m"]
layout_mode = 2
text = "Sell"
horizontal_alignment = 1

[node name="cost" parent="m/h/sale/m/v" instance=ExtResource("5_4h0cf")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 3
override_visible = 15
flip_colors = true
font_size_override = 25

[connection signal="item_selected" from="m/h/OptionButton" to="." method="_on_option_button_item_selected"]
